tiny/parser/y.output
State 68 conflicts: 1 shift/reduce
State 81 conflicts: 3 reduce/reduce


Grammar

    0 $accept: Tiny $end

    1 Tiny: PROGRAM Name ':' Dclns Body Name '.'

    2 Dclns: VAR Dclns_1
    3      | %empty

    4 Dclns_1: %empty
    5        | Dcln ';' Dclns_1

    6 Dcln: Dcln_1

    7 Dcln_1: Name ':' Type
    8       | Name ',' Dcln_1

    9 Type: INTEGER
   10     | BOOLEAN

   11 Body: BEGINX Body_1

   12 Body_1: Statement END
   13       | Statement ';' Body_1

   14 Statement: Name ASSIGNMENT Expression
   15          | OUTPUT '(' Expression ')'
   16          | OUTPUT '(' Statement_1
   17          | IF Expression THEN Statement Statement_1_1
   18          | WHILE Expression DO Statement
   19          | Body
   20          | %empty

   21 Statement_1_1: %empty
   22              | ELSE Statement

   23 Statement_1: Expression ')'
   24            | Expression ',' Statement_1

   25 Expression: Term
   26           | Term LTE Term
   27           | Term GTE Term
   28           | Term LT Term
   29           | Term GT Term
   30           | Term EQ Term
   31           | Term NEQ Term

   32 Term: Primary
   33     | Primary '+' Term
   34     | Primary '-' Term
   35     | Primary OR Term
   36     | Primary AND Term

   37 Primary: '-' Primary
   38        | '+' Primary
   39        | NOT Primary
   40        | READ
   41        | Name
   42        | INTEGER_NUM
   43        | '(' Expression ')'

   44 Name: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15 16 43
')' (41) 15 23 43
'+' (43) 33 38
',' (44) 8 24
'-' (45) 34 37
'.' (46) 1
':' (58) 1 7
';' (59) 5 13
error (256)
NEQ (258) 31
END (259) 12
VAR (260) 2
IDENTIFIER (261) 44
IF (262) 17
READ (263) 40
ELSE (264) 22
THEN (265) 17
GT (266) 29
EQ (267) 30
WHILE (268) 18
OUTPUT (269) 15 16
GTE (270) 27
NOT (271) 39
DO (272) 18
BEGINX (273) 11
BOOLEAN (274) 10
INTEGER_NUM (275) 42
AND (276) 36
INTEGER (277) 9
LTE (278) 26
OR (279) 35
LT (280) 28
ASSIGNMENT (281) 14
PROGRAM (282) 1


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
Tiny (37)
    on left: 1, on right: 0
Dclns (38)
    on left: 2 3, on right: 1
Dclns_1 (39)
    on left: 4 5, on right: 2 5
Dcln (40)
    on left: 6, on right: 5
Dcln_1 (41)
    on left: 7 8, on right: 6 8
Type (42)
    on left: 9 10, on right: 7
Body (43)
    on left: 11, on right: 1 19
Body_1 (44)
    on left: 12 13, on right: 11 13
Statement (45)
    on left: 14 15 16 17 18 19 20, on right: 12 13 17 18 22
Statement_1_1 (46)
    on left: 21 22, on right: 17
Statement_1 (47)
    on left: 23 24, on right: 16 24
Expression (48)
    on left: 25 26 27 28 29 30 31, on right: 14 15 17 18 23 24 43
Term (49)
    on left: 32 33 34 35 36, on right: 25 26 27 28 29 30 31 33 34 35
    36
Primary (50)
    on left: 37 38 39 40 41 42 43, on right: 32 33 34 35 36 37 38 39
Name (51)
    on left: 44, on right: 1 7 8 14 41


State 0

    0 $accept: . Tiny $end

    PROGRAM  shift, and go to state 1

    Tiny  go to state 2


State 1

    1 Tiny: PROGRAM . Name ':' Dclns Body Name '.'

    IDENTIFIER  shift, and go to state 3

    Name  go to state 4


State 2

    0 $accept: Tiny . $end

    $end  shift, and go to state 5


State 3

   44 Name: IDENTIFIER .

    $default  reduce using rule 44 (Name)


State 4

    1 Tiny: PROGRAM Name . ':' Dclns Body Name '.'

    ':'  shift, and go to state 6


State 5

    0 $accept: Tiny $end .

    $default  accept


State 6

    1 Tiny: PROGRAM Name ':' . Dclns Body Name '.'

    VAR  shift, and go to state 7

    $default  reduce using rule 3 (Dclns)

    Dclns  go to state 8


State 7

    2 Dclns: VAR . Dclns_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 4 (Dclns_1)

    Dclns_1  go to state 9
    Dcln     go to state 10
    Dcln_1   go to state 11
    Name     go to state 12


State 8

    1 Tiny: PROGRAM Name ':' Dclns . Body Name '.'

    BEGINX  shift, and go to state 13

    Body  go to state 14


State 9

    2 Dclns: VAR Dclns_1 .

    $default  reduce using rule 2 (Dclns)


State 10

    5 Dclns_1: Dcln . ';' Dclns_1

    ';'  shift, and go to state 15


State 11

    6 Dcln: Dcln_1 .

    $default  reduce using rule 6 (Dcln)


State 12

    7 Dcln_1: Name . ':' Type
    8       | Name . ',' Dcln_1

    ':'  shift, and go to state 16
    ','  shift, and go to state 17


State 13

   11 Body: BEGINX . Body_1

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 20 (Statement)

    Body       go to state 21
    Body_1     go to state 22
    Statement  go to state 23
    Name       go to state 24


State 14

    1 Tiny: PROGRAM Name ':' Dclns Body . Name '.'

    IDENTIFIER  shift, and go to state 3

    Name  go to state 25


State 15

    5 Dclns_1: Dcln ';' . Dclns_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 4 (Dclns_1)

    Dclns_1  go to state 26
    Dcln     go to state 10
    Dcln_1   go to state 11
    Name     go to state 12


State 16

    7 Dcln_1: Name ':' . Type

    BOOLEAN  shift, and go to state 27
    INTEGER  shift, and go to state 28

    Type  go to state 29


State 17

    8 Dcln_1: Name ',' . Dcln_1

    IDENTIFIER  shift, and go to state 3

    Dcln_1  go to state 30
    Name    go to state 12


State 18

   17 Statement: IF . Expression THEN Statement Statement_1_1

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Expression  go to state 37
    Term        go to state 38
    Primary     go to state 39
    Name        go to state 40


State 19

   18 Statement: WHILE . Expression DO Statement

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Expression  go to state 41
    Term        go to state 38
    Primary     go to state 39
    Name        go to state 40


State 20

   15 Statement: OUTPUT . '(' Expression ')'
   16          | OUTPUT . '(' Statement_1

    '('  shift, and go to state 42


State 21

   19 Statement: Body .

    $default  reduce using rule 19 (Statement)


State 22

   11 Body: BEGINX Body_1 .

    $default  reduce using rule 11 (Body)


State 23

   12 Body_1: Statement . END
   13       | Statement . ';' Body_1

    END  shift, and go to state 43
    ';'  shift, and go to state 44


State 24

   14 Statement: Name . ASSIGNMENT Expression

    ASSIGNMENT  shift, and go to state 45


State 25

    1 Tiny: PROGRAM Name ':' Dclns Body Name . '.'

    '.'  shift, and go to state 46


State 26

    5 Dclns_1: Dcln ';' Dclns_1 .

    $default  reduce using rule 5 (Dclns_1)


State 27

   10 Type: BOOLEAN .

    $default  reduce using rule 10 (Type)


State 28

    9 Type: INTEGER .

    $default  reduce using rule 9 (Type)


State 29

    7 Dcln_1: Name ':' Type .

    $default  reduce using rule 7 (Dcln_1)


State 30

    8 Dcln_1: Name ',' Dcln_1 .

    $default  reduce using rule 8 (Dcln_1)


State 31

   40 Primary: READ .

    $default  reduce using rule 40 (Primary)


State 32

   39 Primary: NOT . Primary

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Primary  go to state 47
    Name     go to state 40


State 33

   42 Primary: INTEGER_NUM .

    $default  reduce using rule 42 (Primary)


State 34

   43 Primary: '(' . Expression ')'

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Expression  go to state 48
    Term        go to state 38
    Primary     go to state 39
    Name        go to state 40


State 35

   38 Primary: '+' . Primary

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Primary  go to state 49
    Name     go to state 40


State 36

   37 Primary: '-' . Primary

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Primary  go to state 50
    Name     go to state 40


State 37

   17 Statement: IF Expression . THEN Statement Statement_1_1

    THEN  shift, and go to state 51


State 38

   25 Expression: Term .
   26           | Term . LTE Term
   27           | Term . GTE Term
   28           | Term . LT Term
   29           | Term . GT Term
   30           | Term . EQ Term
   31           | Term . NEQ Term

    NEQ  shift, and go to state 52
    GT   shift, and go to state 53
    EQ   shift, and go to state 54
    GTE  shift, and go to state 55
    LTE  shift, and go to state 56
    LT   shift, and go to state 57

    $default  reduce using rule 25 (Expression)


State 39

   32 Term: Primary .
   33     | Primary . '+' Term
   34     | Primary . '-' Term
   35     | Primary . OR Term
   36     | Primary . AND Term

    AND  shift, and go to state 58
    OR   shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61

    $default  reduce using rule 32 (Term)


State 40

   41 Primary: Name .

    $default  reduce using rule 41 (Primary)


State 41

   18 Statement: WHILE Expression . DO Statement

    DO  shift, and go to state 62


State 42

   15 Statement: OUTPUT '(' . Expression ')'
   16          | OUTPUT '(' . Statement_1

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Statement_1  go to state 63
    Expression   go to state 64
    Term         go to state 38
    Primary      go to state 39
    Name         go to state 40


State 43

   12 Body_1: Statement END .

    $default  reduce using rule 12 (Body_1)


State 44

   13 Body_1: Statement ';' . Body_1

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 20 (Statement)

    Body       go to state 21
    Body_1     go to state 65
    Statement  go to state 23
    Name       go to state 24


State 45

   14 Statement: Name ASSIGNMENT . Expression

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Expression  go to state 66
    Term        go to state 38
    Primary     go to state 39
    Name        go to state 40


State 46

    1 Tiny: PROGRAM Name ':' Dclns Body Name '.' .

    $default  reduce using rule 1 (Tiny)


State 47

   39 Primary: NOT Primary .

    $default  reduce using rule 39 (Primary)


State 48

   43 Primary: '(' Expression . ')'

    ')'  shift, and go to state 67


State 49

   38 Primary: '+' Primary .

    $default  reduce using rule 38 (Primary)


State 50

   37 Primary: '-' Primary .

    $default  reduce using rule 37 (Primary)


State 51

   17 Statement: IF Expression THEN . Statement Statement_1_1

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 20 (Statement)

    Body       go to state 21
    Statement  go to state 68
    Name       go to state 24


State 52

   31 Expression: Term NEQ . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Term     go to state 69
    Primary  go to state 39
    Name     go to state 40


State 53

   29 Expression: Term GT . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Term     go to state 70
    Primary  go to state 39
    Name     go to state 40


State 54

   30 Expression: Term EQ . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Term     go to state 71
    Primary  go to state 39
    Name     go to state 40


State 55

   27 Expression: Term GTE . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Term     go to state 72
    Primary  go to state 39
    Name     go to state 40


State 56

   26 Expression: Term LTE . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Term     go to state 73
    Primary  go to state 39
    Name     go to state 40


State 57

   28 Expression: Term LT . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Term     go to state 74
    Primary  go to state 39
    Name     go to state 40


State 58

   36 Term: Primary AND . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Term     go to state 75
    Primary  go to state 39
    Name     go to state 40


State 59

   35 Term: Primary OR . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Term     go to state 76
    Primary  go to state 39
    Name     go to state 40


State 60

   33 Term: Primary '+' . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Term     go to state 77
    Primary  go to state 39
    Name     go to state 40


State 61

   34 Term: Primary '-' . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Term     go to state 78
    Primary  go to state 39
    Name     go to state 40


State 62

   18 Statement: WHILE Expression DO . Statement

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 20 (Statement)

    Body       go to state 21
    Statement  go to state 79
    Name       go to state 24


State 63

   16 Statement: OUTPUT '(' Statement_1 .

    $default  reduce using rule 16 (Statement)


State 64

   15 Statement: OUTPUT '(' Expression . ')'
   23 Statement_1: Expression . ')'
   24            | Expression . ',' Statement_1

    ','  shift, and go to state 80
    ')'  shift, and go to state 81


State 65

   13 Body_1: Statement ';' Body_1 .

    $default  reduce using rule 13 (Body_1)


State 66

   14 Statement: Name ASSIGNMENT Expression .

    $default  reduce using rule 14 (Statement)


State 67

   43 Primary: '(' Expression ')' .

    $default  reduce using rule 43 (Primary)


State 68

   17 Statement: IF Expression THEN Statement . Statement_1_1

    ELSE  shift, and go to state 82

    ELSE      [reduce using rule 21 (Statement_1_1)]
    $default  reduce using rule 21 (Statement_1_1)

    Statement_1_1  go to state 83


State 69

   31 Expression: Term NEQ Term .

    $default  reduce using rule 31 (Expression)


State 70

   29 Expression: Term GT Term .

    $default  reduce using rule 29 (Expression)


State 71

   30 Expression: Term EQ Term .

    $default  reduce using rule 30 (Expression)


State 72

   27 Expression: Term GTE Term .

    $default  reduce using rule 27 (Expression)


State 73

   26 Expression: Term LTE Term .

    $default  reduce using rule 26 (Expression)


State 74

   28 Expression: Term LT Term .

    $default  reduce using rule 28 (Expression)


State 75

   36 Term: Primary AND Term .

    $default  reduce using rule 36 (Term)


State 76

   35 Term: Primary OR Term .

    $default  reduce using rule 35 (Term)


State 77

   33 Term: Primary '+' Term .

    $default  reduce using rule 33 (Term)


State 78

   34 Term: Primary '-' Term .

    $default  reduce using rule 34 (Term)


State 79

   18 Statement: WHILE Expression DO Statement .

    $default  reduce using rule 18 (Statement)


State 80

   24 Statement_1: Expression ',' . Statement_1

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    NOT          shift, and go to state 32
    INTEGER_NUM  shift, and go to state 33
    '('          shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36

    Statement_1  go to state 84
    Expression   go to state 85
    Term         go to state 38
    Primary      go to state 39
    Name         go to state 40


State 81

   15 Statement: OUTPUT '(' Expression ')' .
   23 Statement_1: Expression ')' .

    END       reduce using rule 15 (Statement)
    END       [reduce using rule 23 (Statement_1)]
    ELSE      reduce using rule 15 (Statement)
    ELSE      [reduce using rule 23 (Statement_1)]
    ';'       reduce using rule 15 (Statement)
    ';'       [reduce using rule 23 (Statement_1)]
    $default  reduce using rule 15 (Statement)


State 82

   22 Statement_1_1: ELSE . Statement

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 20 (Statement)

    Body       go to state 21
    Statement  go to state 86
    Name       go to state 24


State 83

   17 Statement: IF Expression THEN Statement Statement_1_1 .

    $default  reduce using rule 17 (Statement)


State 84

   24 Statement_1: Expression ',' Statement_1 .

    $default  reduce using rule 24 (Statement_1)


State 85

   23 Statement_1: Expression . ')'
   24            | Expression . ',' Statement_1

    ','  shift, and go to state 80
    ')'  shift, and go to state 87


State 86

   22 Statement_1_1: ELSE Statement .

    $default  reduce using rule 22 (Statement_1_1)


State 87

   23 Statement_1: Expression ')' .

    $default  reduce using rule 23 (Statement_1)
